--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,11 +17,12 @@ build:
 
 requirements:
   host:
-    - python >=3.2
+    - python >=3.6
     - pip
   run:
-    - python >=3.2
-    - requests
+    - python >=3.6
+    - pyjwt >=1.7.1
+    - requests >=2.14.0
 
 test:
   imports:
