--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,31 +1,32 @@
 {% set name = "auth0-python" %}
 {% set version = "4.4.1" %}
 
-
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name.replace('-', '_') }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/auth0_python-{{ version }}.tar.gz
   sha256: 24c527182146e61a2de51966de5fd2f4df11cb90ace460bad2fc3b37c71bc7c4
 
 build:
-  number: 0
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
+  number: 0
 
 requirements:
   host:
-    - python >=3.7
+    - python >=3.7,<4.0
+    - poetry-core >=1.0.0
+    - poetry-dynamic-versioning >=1.0.0,<2.0.0
     - pip
   run:
+    - python >=3.7.0,<4.0.0
     - aiohttp >=3.8.5,<4.0.0
+    - pyjwt >=2.8.0,<3.0.0
     - cryptography >=41.0.3,<42.0.0
     - pyopenssl >=23.2.0,<24.0.0
-    - python >=3.7
     - requests >=2.31.0,<3.0.0
-    - pyjwt >=2.8.0,<3.0.0
 
 test:
   imports:
