--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,13 +16,13 @@ build:
 
 requirements:
   host:
-    - python >=3.7,<4.0
+    - python >=3.8
     - poetry-core >=1.0.0
     - poetry-dynamic-versioning >=1.0.0,<2.0.0
     - pip
   run:
     - urllib3 >=2.0.7,<3.0.0
-    - python >=3.7.0,<4.0.0
+    - python >=3.8
     - aiohttp >=3.8.5,<4.0.0
     - pyjwt >=2.8.0,<3.0.0
     - cryptography >=42.0.4,<43.0.0
